Letter spacing fix.

--- a/website/client/src/app/stories/story.component.scss
+++ b/website/client/src/app/stories/story.component.scss
@@ -80,6 +80,7 @@ h5 {
 
     &.hi {
         text-transform: none;
+        letter-spacing: 0;
         @include enlarge();
     }
 }
